# Apk-sentinel

./: .gitignore  README.md  pyproject.toml  run_dashboard.py
docs/: DASHBOARD.md  PROXY_SETUP.md  REPORTING_AND_CASES.md
src/apk_sentinel/: __init__.py  __main__.py  apk.py  axml.py  capture_proxy.py  cli.py  core.py  dashboard.py  dynamic.py  finding_guidance.py  indicators.py  inventory.py  manifest.py  models.py  replay.py  report.py  report_template.py  rules.py  secret_patterns.py  tls_ca.py  vuln_intel.py
src/apk_sentinel/static/: dashboard.css
src/apk_sentinel/templates/dashboard/: about.html  base.html  case_intelligence.html  components.html  dynamic.html  error.html  files.html  findings.html  index.html  indicators.html  intelligence.html  overview.html  permissions.html  proxy.html  repeater.html  settings.html
src/apk_sentinel/templates/dashboard/partials/: finding_card.html
tests/: test_dashboard.py  test_scan.py
