[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "apk-sentinel"
version = "1.0.0"
description = "Local Android APK security assessment dashboard"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "APK Sentinel contributors" }]
license = { text = "MIT" }
keywords = ["android", "apk", "security", "static-analysis", "proxy", "mobile-security"]
dependencies = [
    "cryptography>=42",
    "Flask>=3.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.scripts]
apk-sentinel = "apk_sentinel.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
apk_sentinel = ["templates/**/*.html", "static/*.css"]
